# pwbt

./: .envrc  .gitignore  devenv.nix  pyproject.toml
models/: F1.model.h5  F1.weights.h5
research/: data_ingest.py  futures_momentum_strategy.ipynb  stock_prediction.ipynb  stock_price.weights.h5  tensorflow_stock_price_prediction.ipynb
research/backtesting/: backtrader.ipynb  pyalgotrade.ipynb
research/data/: data_ingest.py  scratch.ipynb  yfinance.ipynb
research/models/: F1_model_generator.ipynb  F1_model_predictor.ipynb  tensorflow_stock_price_prediction.ipynb
research/models/rob_tf/: fquick-1011-01.py  mquick-1011-01.py  pquick-1011-01.py
trader/: main.py
