[project]
name = "pwbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pq>=1.9.1",
    "psycopg>=3.2.4",
    "pwb-toolbox>=0.1.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
]
